name:                wdns-registrar
version:             0.1.0.0
synopsis:            WooDNSword Registrar
description:         Please see README.md
homepage:            http://github.com/WooDNSword/woodnsword.github.io/wiki
license:             MIT
license-file:        LICENSE
author:              Carter Hinsley
maintainer:          carterhinsley@outlook.com
copyright:           2016 Carter Hinsley
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wdns-registrar-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wdns-registrar
  default-language:    Haskell2010

test-suite wdns-registrar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wdns-registrar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xnil/registrar
